Fix action button unusable, z-index : -1 fault

--- a/src/css/fight.css
+++ b/src/css/fight.css
@@ -187,10 +187,8 @@ div.select-char , div.select-monster{
   flex-direction: row;
   justify-content: space-between;
   background: rgba(255, 255, 255, 0.69);
-  transform: translateY(-1.1em);
   width: fit-content;
   margin: 0 auto;
-  z-index: -1;
 }
 
 .fight-card > .action > button{
